Sidebar Fonts/spacing fixed
Text now wraps instead of going full retard in the sidebar

--- a/public/styles/simple-sidebar.css
+++ b/public/styles/simple-sidebar.css
@@ -59,8 +59,8 @@
 }
 
 .sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
+    margin-bottom: 30px;
+    margin-left: 10px;
 }
 
 .sidebar-nav li a {
@@ -81,9 +81,9 @@
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 65px;
+
     font-size: 18px;
-    line-height: 60px;
+    line-height: 20px;
 }
 
 .sidebar-nav > .sidebar-brand a {
